# lighted-ever

./: .gitignore  .gitmodules  Dockerfile  README.md  delete_slangtorch_cache.sh  docker_build_ever.py  docker_render.py  docker_train.py  docker_visualize.py  full_eval.py  host_render_server.py  measure_fps.py  rebuild_ever.sh  render.py  requirements.txt  train.py  unblock_slang.py
.devcontainer/: devcontainer.json
arguments/: __init__.py
ever/: .gitignore  CMakeLists.txt  __init__.py  eval_sh.py
ever/splinetracers/: fast_ellipsoid_splinetracer.py
ever/splinetracers/fast_ellipsoid_splinetracer/: CMakeLists.txt  Forward.cpp  Forward.h  initialize_density.cu  py_binding.cpp  structs.h
ever/splinetracers/fast_ellipsoid_splinetracer/slang/: backwards_kernel.slang  fast_shaders.slang  safe-math.slang  sh.slang  shaders.slang  spline-machine.slang  tensor-util.slang  tri-intersect.slang
gaussian_renderer/: ever.py  network_gui.py
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
utils/: camera_utils.py  camera_utils_zipnerf.py
